Resolves: fdo#65501 ensure configured backup dir exists before using it

the ucb stuff is the most god awful painful api ever

Change-Id: I491d2cb9b7d5d37723b32f0a26a22a09c16bc02e